# warply

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  providers.md
examples/: lambda_disagg.py
tests/: test_compiler.py  test_health.py  test_http_client.py  test_integration_lambda.py  test_lifecycle_mock.py  test_skypilot_provider.py  test_skypilot_task.py
warply/: __init__.py  _constants.py  engine.py  exceptions.py  pool.py  types.py
warply/compiler/: __init__.py  compile.py  plan.py
warply/engines/: __init__.py  base.py  sglang.py
warply/kv/: __init__.py  base.py  nixl.py
warply/providers/: __init__.py  base.py  local_mock.py  skypilot.py  skypilot_task.py
warply/router/: __init__.py  base.py  mock.py
warply/runtime/: __init__.py  client.py  factory.py  health.py  lifecycle.py  routing.py  yaml.py
