[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warply"
version = "0.0.1"
description = "Python control plane for disaggregated inference"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Warply contributors" }]
keywords = ["inference", "llm", "disaggregation", "sglang", "kv-cache"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/afifi-yusuf/warply"
Documentation = "https://github.com/afifi-yusuf/warply/blob/main/CONTRIBUTING.md"
Repository = "https://github.com/afifi-yusuf/warply"
Issues = "https://github.com/afifi-yusuf/warply/issues"

[tool.hatch.build.targets.wheel]
packages = ["warply"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
